--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,8 @@
-body{
-	color: blue;
+body {
+    color: blue;
 }
 
-#friendPic{
-	width: 150px;
-	height: 150px;
+img {
+    width: 150px;
+    height: 150px;
 }
